data/collection/fixes/descriptions/java/JDK-8020147
interface Function<X, Y> {
  Y apply(X x);
}

class Test {
  <T> void g(Function<String, T> f) { }
  <U> String m(U u, Function<U, U> fuu) { return  null; }

  void test() {
     g(x->m("", i->(String)x));
  }
}

This reports the following error:

Test.java:586: error: unexpected type
     g(x->m("", i->(String)i));
                           ^
  required: value
  found:    class